# tiny-maps

./: .gitignore  Cargo.toml
osm_schema_builder/: Cargo.toml
osm_schema_builder/src/: lib.rs  util.rs
osm_schema_builder/src/deprecations/: mod.rs
osm_schema_builder/src/fields/: load_field.rs  load_field_data.rs  mod.rs  mod_tree.rs  parser.rs
osm_schema_builder/src/presets/: mod.rs
osm_structures/: Cargo.toml
osm_structures/src/: lib.rs
osm_structures/src/structured_elements/: address.rs  colour.rs  contact.rs  mod.rs
osm_tag_compression/: Cargo.toml
osm_tag_compression/src/: field.rs  lib.rs  removable.rs
osm_tag_compression/src/compressed_data/: mod.rs  node.rs  relation.rs  way.rs
osm_tag_compression/src/tag_compressing/: mod.rs  node.rs  relation.rs  way.rs
osm_tags_to_fields/: Cargo.toml  build.rs
osm_tags_to_fields/id-tagging-schema-data/fields/: access_aisle.json  advertising.json  aeroway.json  agrarian.json  amenity.json  animal_boarding.json  animal_breeding.json  animal_shelter.json  athletics.json  books.json  booth.json  boules.json  boundary.json  brewery.json  bridge_combo.json  building_area.json  building_area_yes.json  bunker_type.json  circumference.json  club.json  communication_multi.json  construction.json  consulting.json  country.json  country_flag.json  currency_multi.json  cutting.json  cycle_network.json  denomination.json  denotation.json  depot.json  design.json  design_power_pole.json  design_power_tower.json  destination_oneway.json  diameter.json  diameter_crown.json  direction_named.json  door_type.json  drink_multi.json  (+100 more)
osm_tags_to_fields/id-tagging-schema-data/fields/aerialway/: index.json
osm_tags_to_fields/id-tagging-schema-data/fields/area/: highway.json
osm_tags_to_fields/id-tagging-schema-data/fields/bridge/: index.json  support.json
osm_tags_to_fields/id-tagging-schema-data/fields/building/: index.json  material.json  part.json
osm_tags_to_fields/id-tagging-schema-data/fields/camera/: mount.json
osm_tags_to_fields/id-tagging-schema-data/fields/dance/: style.json
osm_tags_to_fields/id-tagging-schema-data/fields/destination/: index.json  ref.json  symbol.json  symbol_oneway.json
osm_tags_to_fields/id-tagging-schema-data/fields/diplomatic/: services.json
osm_tags_to_fields/id-tagging-schema-data/fields/disused/: amenity.json  railway.json  shop.json
osm_tags_to_fields/id-tagging-schema-data/fields/door/: index.json
osm_tags_to_fields/id-tagging-schema-data/fields/fire_hydrant/: diameter.json  pressure.json
osm_tags_to_fields/id-tagging-schema-data/fields/flag/: type.json
osm_tags_to_fields/id-tagging-schema-data/fields/fuel/: index.json
osm_tags_to_fields/id-tagging-schema-data/fields/garden/: type.json
osm_tags_to_fields/id-tagging-schema-data/fields/generator/: type.json
osm_tags_to_fields/id-tagging-schema-data/fields/historic/: civilization.json  index.json
osm_tags_to_fields/id-tagging-schema-data/fields/kerb/: height.json
osm_tags_to_fields/id-tagging-schema-data/fields/network/: type.json
osm_tags_to_fields/id-tagging-schema-data/fields/not/: name.json
osm_tags_to_fields/id-tagging-schema-data/fields/opening_hours/: drive_through.json  index.json
osm_tags_to_fields/id-tagging-schema-data/fields/operator/: type.json
osm_tags_to_fields/id-tagging-schema-data/fields/plant/: index.json
osm_tags_to_fields/id-tagging-schema-data/fields/playground/: index.json  theme.json
osm_tags_to_fields/id-tagging-schema-data/fields/public_bookcase/: type.json
osm_tags_to_fields/id-tagging-schema-data/fields/railway/: index.json
osm_tags_to_fields/id-tagging-schema-data/fields/seamark/: type.json
osm_tags_to_fields/id-tagging-schema-data/fields/service/: bicycle.json  index.json  vehicle.json
osm_tags_to_fields/id-tagging-schema-data/fields/siren/: purpose.json
osm_tags_to_fields/id-tagging-schema-data/fields/source/: population.json
osm_tags_to_fields/id-tagging-schema-data/fields/species/: index.json
osm_tags_to_fields/id-tagging-schema-data/fields/surveillance/: index.json  zone.json
osm_tags_to_fields/id-tagging-schema-data/fields/telecom/: medium.json
osm_tags_to_fields/id-tagging-schema-data/fields/toilets/: position.json
osm_tags_to_fields/id-tagging-schema-data/fields/tower/: construction.json  (+1 more)
osm_tags_to_fields/src/: lib.rs  stateful_iterate.rs
storage/: Cargo.toml
storage/src/: bit_sections.rs  compression.rs  lazy_file.rs  lib.rs  multitype_paged_storage.rs  paged_storage.rs  pooled_storage.rs  primitive_serialization.rs  serialize_fast.rs  serialize_min.rs  storage.rs  varint.rs
storage/src/cache/: mod.rs
storage/src/packed_string_serialization/: is_final.rs  latin_lowercase_fivebit.rs  mod.rs
tree/: Cargo.toml
tree/.test/: storagetest  tree::test::overlapping_keys
tree/src/: bbox.rs  compare_by.rs  lib.rs  point_range.rs  structure.rs  test.rs  tree.rs  tree_serde.rs  tree_traits.rs
tree/src/dense/: mod.rs  structure.rs  tree.rs  tree_serde.rs
tree/src/sparse/: mod.rs  open.rs  structure.rs  tree.rs  tree_serde.rs
viewer/: Cargo.toml
viewer/src/: main.rs  window.rs
viewer/src/cartography/: mod.rs
viewer/src/loader/: mod.rs
(+103 files in other folders)
