[package]
name = "offline-tiny-maps"
version = "0.1.0"
edition = "2021"

default-run = "main"

[workspace]
members = [ "btree_vec", "lru_cache", "lutmorton", "osm_literals","storage", "tree"]


[dependencies]
osmpbfreader = "0.16.1"
par-map = "0.1.4"
rayon = "1.10.0"
minimal_storage = { path = "./storage" }
osm_literals = { path = "./osm_literals" }
tree = { path = "./tree" }
clap = { version = "4.5.11", features = ["derive"] }
