[package]
name = "osm_schema_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = { version = "*", features = ["blocking"] }
futures-io = { version = "0.2.0-beta" }

[build-dependencies]
