[package]
name = "osm_structures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minimal_storage = { path = "../storage" }
osm_value_atom = { path = "../osm_value_atom" }
osmpbfreader = "0.16.1"

[build-dependencies]
serde_json = "1.0"